--- a/zrouter/api/input_json/dynamic/netstat.json5
+++ b/zrouter/api/input_json/dynamic/netstat.json5
@@ -1,11 +1,11 @@
 /*
 |    单元测试      |post请求次数 |描述|
 |------------------|-------------|----|
-|test_001_get_status | 1 | 获取wifi质量，内存等|
-|test_002_get_diagnose | 1 | 获取版本号，mac地址等|
+|test_001_get_total | 1 | 获取总流量|
+|test_002_get_device | 1 | 获取设备流量|
 */
 {
-    "test_001_get_status": [
+    "test_001_get_total": [
         {
             "ver": "v1",
             "sid": "00000000000000000000000000000000",
@@ -13,14 +13,14 @@
             "param": {
                 "msg_id": 11111,
                 "params": [{
-                    "module": "status",
-                    "api": "get"
+                    "module": "netstat",
+                    "api": "get_total"
                 }]
             }
         }
     ],
 
-    "test_002_get_diagnose": [
+    "test_002_get_device": [
         {
             "ver": "v1",
             "sid": "00000000000000000000000000000000",
@@ -28,8 +28,8 @@
             "param": {
                 "msg_id": 11111,
                 "params": [{
-                    "module": "status",
-                    "api": "get_diagnose"
+                    "module": "netstat",
+                    "api": "get_device"
                 }]
             }
         }
