--- a/zrouter/api/input_json/static/qos.json5
+++ b/zrouter/api/input_json/static/qos.json5
@@ -8,6 +8,9 @@
 |test_005_add_qos_node | 2 | 添加qos node信息|
 |test_006_modify_qos_node | 2 | 修改qos node信息|
 |test_007_del_qos_node | 2 | 删除qos node信息|
+|test_008_get_qos  | 1 | 获取默认qos rule|
+|test_009_set_qos  | 2 | 设置qos rule|
+|test_010_reset_qos  | 2 | 再次设置qos rule，恢复成原本的参数|
 */
 {
     "test_001_get_qos": [
@@ -230,6 +233,81 @@
                         "api": "get_node"
                     }
                 ]
+            }
+        }
+    ],
+
+    "test_008_get_rule": [
+        {
+            "ver": "v1",
+            "sid":"000000000000000000000000000000",
+            "method": "api",
+            "param": {
+                "msg_id": 11111,
+                "params": [{
+                    "module": "qos",
+                    "api": "get_rule"
+                }]
+            }
+        }
+    ],
+
+    "test_009_set_rule": [
+        {
+            "ver": "v1",
+            "sid":"000000000000000000000000000000",
+            "method": "api",
+            "param": {
+                "msg_id": 11111,
+                "params": [{
+                    "module": "qos",
+                    "api": "set_rule",
+                    "param": {
+                        "rule": 4
+                    }
+                }]
+            }
+        },
+        {
+            "ver": "v1",
+            "sid":"000000000000000000000000000000",
+            "method": "api",
+            "param": {
+                "msg_id": 11111,
+                "params": [{
+                    "module": "qos",
+                    "api": "get_rule"
+                }]
+            }
+        }
+    ],
+
+    "test_010_reset_rule": [
+        {
+            "ver": "v1",
+            "sid":"000000000000000000000000000000",
+            "method": "api",
+            "param": {
+                "msg_id": 11111,
+                "params": [{
+                    "module": "qos",
+                    "api": "set_rule",
+                    "param": {
+                        "rule": 1
+                    }
+                }]
+            }
+        },
+        {
+            "ver": "v1",
+            "sid":"000000000000000000000000000000",
+            "method": "api",
+            "param": {
+                "msg_id": 11111,
+                "params": [{
+                    "module": "qos",
+                    "api": "get_rule"
+                }]
             }
         }
     ]
