--- a/zrouter/api/output_json/static/wan.json5
+++ b/zrouter/api/output_json/static/wan.json5
@@ -283,7 +283,7 @@
         }
     ],
 
-        "test_007_set_pppoe_hand_dns_no_advance": [
+    "test_007_set_pppoe_hand_dns_no_advance": [
         {
             "data": [{
                 "module": "wan",
@@ -510,6 +510,136 @@
             }],
             "msg_id":11111,
             "errcode":0
+        }
+    ],
+
+    "test_011_reset_wan": [
+        {
+            "data": [{
+                "module": "wan",
+                "errcode": 0,
+                "result": {},
+                "api": "set"
+            }],
+            "msg_id": 11111,
+            "errcode": 0
+        },
+        {
+            "data":[{
+                "module":"wan",
+                "errcode":0,
+                "result":{
+                    "config":{
+                        "dhcp":{
+                            "ipv4dns1":"114.114.114.114",
+                            "peerdns":"1",
+                            "ipv4dns2":"114.114.115.115",
+                            "mtu":"1500"
+                        },
+                        "static":{
+                            "ipv4dns2":"8.8.8.8",
+                            "mtu":"1500",
+                            "ipv4dns1":"144.144.144.144",
+                            "ipv4gateway":"192.168.199.1",
+                            "ipv4mask":"255.255.255.0",
+                            "ipv4addr":"192.168.199.123"
+                        },
+                        "pppoe":{
+                            "username": "YWRtaW4=",
+                            "password": "MTIzNDU2Nzg=",
+                            "peerdns": "0",
+                            "ipv4dns1": "144.144.144.144",
+                            "ipv4dns2": "8.8.8.8",
+                            "advance":"1",
+                            "sdial":"1",
+                            "service": "www.test.com",
+                            "mtu": "1492"
+                        },
+                        "wisp":{
+                            "ssid": "ziroom",
+                            "key": "4001001111",
+                            "peerdns": "0",
+                            "ipv4dns1": "144.144.144.144",
+                            "ipv4dns2": "8.8.8.8",
+                            "mtu":"1500"
+                        }
+                    },
+                    "proto":"dhcp"
+                },
+                "api":"get"
+            }],
+            "msg_id":11111,
+            "errcode":0
+        }
+    ],
+
+    "test_012_get_phy_mode": [
+        {
+            "data": [{
+                "module": "wan",
+                "errcode": 0,
+                "result": {
+                    "phymode": "auto",
+                    "current_phymode": "1000f"
+                },
+                "api": "get_phy_mode"
+            }],
+            "msg_id": 11111,
+            "errcode": 0
+        }
+    ],
+
+    "test_013_set_phy_mode": [
+        {
+            "data": [{
+                "module": "wan",
+                "errcode": 0,
+                "result": {
+                },
+                "api": "set_phy_mode"
+            }],
+            "msg_id": 11111,
+            "errcode": 0
+        },
+        {
+            "data": [{
+                "module": "wan",
+                "errcode": 0,
+                "result": {
+                    "phymode": "10h",
+                    "current_phymode": "1000f"
+                },
+                "api": "get_phy_mode"
+            }],
+            "msg_id": 11111,
+            "errcode": 0
+        }
+    ],
+
+    "test_014_reset_phy_mode": [
+        {
+            "data": [{
+                "module": "wan",
+                "errcode": 0,
+                "result": {
+                },
+                "api": "set_phy_mode"
+            }],
+            "msg_id": 11111,
+            "errcode": 0
+        },
+        {
+            "data": [{
+                "module": "wan",
+                "errcode": 0,
+                "result": {
+                    "phymode": "auto",
+                    "current_phymode": "1000f"
+                },
+                "api": "get_phy_mode"
+            }],
+            "msg_id": 11111,
+            "errcode": 0
         }
     ]
 }
