zgateway: add led test

--- a/zrouter/func/zgateway/conf/zgateway.conf
+++ b/zrouter/func/zgateway/conf/zgateway.conf
@@ -1,7 +1,10 @@
 [link]
 host = https://tlink.zihome.com
 passwd = admin
-zgateway = 2.0.8
+zgateway = 2.0.9
 433 = 1.02
 2.4 = 1.0.8
-
+zigbee_devId = 000d6f000b7a976b
+zigbee_prodTypeId = SmartPlug
+ble_devId = 011001275a
+ble_prodTypeId = 8grteg3l
