--- a/zrouter/api/input_json/static/qos.json5
+++ b/zrouter/api/input_json/static/qos.json5
@@ -1,16 +1,15 @@
 /*
 |    单元测试      |post请求次数 |描述|
 |------------------|-------------|----|
-|test_001_get_qos  | 1 | 获取默认qos|
-|test_002_set_qos  | 2 | 设置qos|
-|test_003_reset_qos  | 2 | 再次设置qos，恢复成原本的参数|
-|test_004_get_qos_node | 2 | 获取qos node信息|
-|test_005_add_qos_node | 2 | 添加qos node信息|
-|test_006_modify_qos_node | 2 | 修改qos node信息|
-|test_007_del_qos_node | 2 | 删除qos node信息|
-|test_008_get_qos  | 1 | 获取默认qos rule|
-|test_009_set_qos  | 2 | 设置qos rule|
-|test_010_reset_qos  | 2 | 再次设置qos rule，恢复成原本的参数|
+|test_001_get_qos  | 1 | 获取默认qos,rule1|
+|test_002_set_qos_rule2  | 2 | 设置qos,rule2|
+|test_003_set_qos_rule3  | 2 | 设置qos,rule3|
+|test_004_set_qos_rule4  | 2 | 设置qos,rule4|
+|test_005_reset_qos  | 2 | 再次设置qos,rule1,恢复成原本的参数|
+|test_006_get_qos_node | 2 | 获取qos node信息|
+|test_007_add_qos_node | 2 | 添加qos node信息|
+|test_008_modify_qos_node | 2 | 修改qos node信息|
+|test_009_del_qos_node | 2 | 删除qos node信息|
 */
 {
     "test_001_get_qos": [
@@ -28,7 +27,7 @@
         }
     ],
 
-    "test_002_set_qos": [
+    "test_002_set_qos_rule2": [
         {
             "ver": "v1",
             "sid":"000000000000000000000000000000",
@@ -40,8 +39,9 @@
                     "api": "set",
                     "param": {
                         "enabled": "1",
+                        "rule": 2,
                         "download": 204800,
-                        "upload": 1024000
+                        "upload": 204800
                     }
                 }]
             }
@@ -60,7 +60,73 @@
         }
     ],
 
-    "test_003_reset_qos": [
+    "test_003_set_qos_rule3": [
+        {
+            "ver": "v1",
+            "sid":"000000000000000000000000000000",
+            "method": "api",
+            "param": {
+                "msg_id": 11111,
+                "params": [{
+                    "module": "qos",
+                    "api": "set",
+                    "param": {
+                        "enabled": "1",
+                        "rule": 3,
+                        "download": 1024,
+                        "upload": 1024
+                    }
+                }]
+            }
+        },
+        {
+            "ver": "v1",
+            "sid":"000000000000000000000000000000",
+            "method": "api",
+            "param": {
+                "msg_id": 11111,
+                "params": [{
+                    "module": "qos",
+                    "api": "get"
+                }]
+            }
+        }
+    ],
+
+    "test_004_set_qos_rule4": [
+        {
+            "ver": "v1",
+            "sid":"000000000000000000000000000000",
+            "method": "api",
+            "param": {
+                "msg_id": 11111,
+                "params": [{
+                    "module": "qos",
+                    "api": "set",
+                    "param": {
+                        "enabled": "1",
+                        "rule": 4,
+                        "download": 40960,
+                        "upload": 40960
+                    }
+                }]
+            }
+        },
+        {
+            "ver": "v1",
+            "sid":"000000000000000000000000000000",
+            "method": "api",
+            "param": {
+                "msg_id": 11111,
+                "params": [{
+                    "module": "qos",
+                    "api": "get"
+                }]
+            }
+        }
+    ],
+
+    "test_005_reset_qos": [
         {
             "ver": "v1",
             "sid":"000000000000000000000000000000",
@@ -72,6 +138,7 @@
                     "api": "set",
                     "param": {
                         "enabled": "0",
+                        "rule": 1,
                         "download": 1024000,
                         "upload": 1024000
                     }
@@ -92,7 +159,7 @@
         }
     ],
 
-    "test_004_get_qos_node": [
+    "test_006_get_qos_node": [
         {
             "ver": "v1",
             "sid": "00000000000000000000000000000000",
@@ -109,7 +176,7 @@
         }
     ],
 
-    "test_005_add_qos_node": [
+    "test_007_add_qos_node": [
         {
             "ver": "v1",
             "sid":"000000000000000000000000000000",
@@ -148,7 +215,7 @@
         }
     ],
 
-    "test_006_modify_qos_node": [
+    "test_008_modify_qos_node": [
         {
             "ver": "v1",
             "sid":"000000000000000000000000000000",
@@ -197,7 +264,7 @@
         }
     ],
 
-    "test_007_del_qos_node": [
+    "test_009_del_qos_node": [
         {
             "ver": "v1",
             "sid":"000000000000000000000000000000",
@@ -233,81 +300,6 @@
                         "api": "get_node"
                     }
                 ]
-            }
-        }
-    ],
-
-    "test_008_get_rule": [
-        {
-            "ver": "v1",
-            "sid":"000000000000000000000000000000",
-            "method": "api",
-            "param": {
-                "msg_id": 11111,
-                "params": [{
-                    "module": "qos",
-                    "api": "get_rule"
-                }]
-            }
-        }
-    ],
-
-    "test_009_set_rule": [
-        {
-            "ver": "v1",
-            "sid":"000000000000000000000000000000",
-            "method": "api",
-            "param": {
-                "msg_id": 11111,
-                "params": [{
-                    "module": "qos",
-                    "api": "set_rule",
-                    "param": {
-                        "rule": 4
-                    }
-                }]
-            }
-        },
-        {
-            "ver": "v1",
-            "sid":"000000000000000000000000000000",
-            "method": "api",
-            "param": {
-                "msg_id": 11111,
-                "params": [{
-                    "module": "qos",
-                    "api": "get_rule"
-                }]
-            }
-        }
-    ],
-
-    "test_010_reset_rule": [
-        {
-            "ver": "v1",
-            "sid":"000000000000000000000000000000",
-            "method": "api",
-            "param": {
-                "msg_id": 11111,
-                "params": [{
-                    "module": "qos",
-                    "api": "set_rule",
-                    "param": {
-                        "rule": 1
-                    }
-                }]
-            }
-        },
-        {
-            "ver": "v1",
-            "sid":"000000000000000000000000000000",
-            "method": "api",
-            "param": {
-                "msg_id": 11111,
-                "params": [{
-                    "module": "qos",
-                    "api": "get_rule"
-                }]
             }
         }
     ]
