--- a/zrouter/func/zgateway/conf/zgateway.conf
+++ b/zrouter/func/zgateway/conf/zgateway.conf
@@ -1,10 +1,6 @@
 [link]
-host = https://tlink.zihome.com
+host = https://gw.zihome.com
 passwd = admin
-zgateway = 2.0.9
+zgateway = 2.1.0
 433 = 1.02
-2.4 = 1.0.8
-zigbee_devId = 000d6f000b7a976b
-zigbee_prodTypeId = SmartPlug
-ble_devId = 011001275a
-ble_prodTypeId = 8grteg3l
+2.4 = 1.1.6
